# rpg

./: .gitignore  CMakeLists.txt  EVENT_SYSTEM_DEMO.md  LICENSE  README.md  minify.js  minify.py  package.json  script.js  test_budget.txt  test_input.txt
docs/: CODE_PROTECTION.md  MINIFY_INSTRUCTIONS.md  README.md  README_UI.md
src/: main.cpp
tests/: test_big_compass.txt  test_budget_once.txt  test_coalition_fallback.txt  test_coalition_fix.txt  test_day_increment.txt  test_day_system.txt  test_events.html  test_government.txt  test_left_budget.txt  test_new_logic.txt  test_spectrum.txt  test_tax_rate.txt  test_user_voting.html  test_voting.html
web/: index.html  script.js  styles.css
